Remove legend, add logo, make responsive

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#002040" />
+    <meta name="theme-color" content="#D1D7E1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Launchday 🚀</title>
+    <title>Launchday</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        background: #f0f2f5 !important;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
