--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <!-- netlify forms for bots -->
-    <form name="netlify-feedback-form-v1" netlify hidden>
+    <form
+      name="netlify-feedback-form-v1"
+      netlify
+      netlify-honeypot="bot-field"
+      hidden
+    >
       <input type="number" name="rate" />
       <input type="text" name="feature" />
       <textarea name="change"></textarea>
