--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,54 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="theme-color" content="#D1D7E1" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/pwa-icon512.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57px"
+      href="%PUBLIC_URL%/images/pwa-icon57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72px"
+      href="%PUBLIC_URL%/images/pwa-icon72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76px"
+      href="%PUBLIC_URL%/images/pwa-icon76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114px"
+      href="%PUBLIC_URL%/images/pwa-icon114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120px"
+      href="%PUBLIC_URL%/images/pwa-icon120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144px"
+      href="%PUBLIC_URL%/images/pwa-icon144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152px"
+      href="%PUBLIC_URL%/images/pwa-icon152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180px"
+      href="%PUBLIC_URL%/images/pwa-icon180.png"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Launchday</title>
     <link
