--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,65 @@
         background: #f0f2f5 !important;
       }
     </style>
+    <!-- Hotjar Analytics -->
+    <script>
+      ;(function(h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function() {
+            ;(h.hj.q = h.hj.q || []).push(arguments)
+          }
+        h._hjSettings = { hjid: 1539486, hjsv: 6 }
+        a = o.getElementsByTagName('head')[0]
+        r = o.createElement('script')
+        r.async = 1
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv
+        a.appendChild(r)
+      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=')
+    </script>
+    <!-- Heap Analytics -->
+    <script type="text/javascript">
+      ;(window.heap = window.heap || []),
+        (heap.load = function(e, t) {
+          ;(window.heap.appid = e), (window.heap.config = t = t || {})
+          var r = t.forceSSL || 'https:' === document.location.protocol,
+            a = document.createElement('script')
+          ;(a.type = 'text/javascript'),
+            (a.async = !0),
+            (a.src =
+              (r ? 'https:' : 'http:') +
+              '//cdn.heapanalytics.com/js/heap-' +
+              e +
+              '.js')
+          var n = document.getElementsByTagName('script')[0]
+          n.parentNode.insertBefore(a, n)
+          for (
+            var o = function(e) {
+                return function() {
+                  heap.push(
+                    [e].concat(Array.prototype.slice.call(arguments, 0))
+                  )
+                }
+              },
+              p = [
+                'addEventProperties',
+                'addUserProperties',
+                'clearEventProperties',
+                'identify',
+                'resetIdentity',
+                'removeEventProperty',
+                'setEventProperties',
+                'track',
+                'unsetEventProperty'
+              ],
+              c = 0;
+            c < p.length;
+            c++
+          )
+            heap[p[c]] = o(p[c])
+        })
+      heap.load('2916073633')
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
