Add static fallback

--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      ><footer>
+        <a href="/static/terms">Terms</a> &amp;
+        <a href="/static/policies">Policies</a>
+      </footer>
+    </noscript>
 
     <!-- netlify forms for bots -->
     <form
